# federation-merge

./: README.md  supergraph.yaml
frame/: .pdm-python  pyproject.toml
frame-a/: .pdm-python  pyproject.toml
frame-a/api/: schema.py
frame-b/: .pdm-python  pyproject.toml
frame-b/api/: schema.py
frame/api/: schema.py
